fix: match top/bottom spacing to sides

--- a/src/Views/Form/Templates/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/form.scss
@@ -820,7 +820,7 @@ p {
 	}
 	#give_purchase_form_wrap {
 		background: #fbfbfb;
-		padding: 24px 20px 20px 20px;
+		padding: 12px 20px 6px 20px;
 
 		fieldset {
 			padding: 0;
